# hibot

hibot/: CMakeLists.txt  package.xml
hibot_bringup/: CMakeLists.txt  package.xml
hibot_bringup/launch/: rebot.launch  rviz_rebot.launch  test_acml.launch  test_gmapping.launch
hibot_bringup/launch/include/: base.launch  camera.launch
hibot_bringup/launch/include/nav/: acml.launch  gmapping.launch
hibot_bringup/maps/: test.yaml
hibot_bringup/scripts/: go_rect.py  test.py
patchs/: navigation_patch.diff  turtlebot_apps_patch.diff  turtlebot_patch.diff
