<?xml version="1.0"?>
<package>
  <name>hibot</name>
  <version>0.0.0</version>
  <description>The hibot package</description>
  
  <author>andy</author>
  <author>houxiaoyong</author>
  <maintainer email="andy21304928@gmail.com">andy</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>hibot_bringup</run_depend>

  <export>
    <metapackage/>
  </export>
</package>


