<?xml version="1.0"?>
<package>
  <name>hibot_bringup</name>
  <version>0.0.0</version>
  <description>The hibot_bringup package</description>

  <author>andy</author>
  <author>houxiaoyong</author>
  <maintainer email="andy21304928@gmail.com">andy</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>turtlebot</run_depend>
  <run_depend>turtlebot_apps</run_depend>
  <run_depend>turtlebot_rviz_launchers</run_depend>
  <run_depend>realsense2_camera</run_depend>

</package>
